--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-006-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -63,6 +63,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:36:02.951Z" type="text-version" status="0.0.4" xml:id="UT22084-091-006-9">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:49:59.258Z" type="translation-status" status="2.g" xml:id="UT22084-091-006-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:49:59.258Z" type="text-version" status="0.0.5" xml:id="UT22084-091-006-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
