--- a/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
+++ b/translations/kangyur/placeholders/083-011_toh463-the_secret_revelation_of_vajrapani.xml
@@ -14,12 +14,12 @@
                 <author role="translatorEng" xml:id="UT22084-083-011-6">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:36:11.689Z" type="text-version" status="0.0.4" xml:id="UT22084-083-011-7">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:19:11.668Z" type="translation-status" status="2.h" xml:id="UT22084-083-011-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:19:11.668Z" type="text-version" status="0.0.5" xml:id="UT22084-083-011-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
