--- a/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
+++ b/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-052-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-052"/>
             </publicationStmt>
             <sourceDesc>
@@ -58,6 +58,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:40:47.216Z" type="text-version" status="0.0.3" xml:id="UT22084-091-052-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:22:39.141Z" type="translation-status" status="2.h" xml:id="UT22084-091-052-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:22:39.141Z" type="text-version" status="0.0.4" xml:id="UT22084-091-052-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
