--- a/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
+++ b/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-056-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-056"/>
             </publicationStmt>
             <sourceDesc>
@@ -61,6 +61,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-06T10:50:22.087Z" type="text-version" status="0.0.5" xml:id="UT22084-091-056-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:27:12.204Z" type="translation-status" status="2.h" xml:id="UT22084-091-056-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:27:12.204Z" type="text-version" status="0.0.6" xml:id="UT22084-091-056-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
