--- a/translations/kangyur/placeholders/091-083_toh685-the_incantation_of_nagadatta_the_essence_of_the_nagas.xml
+++ b/translations/kangyur/placeholders/091-083_toh685-the_incantation_of_nagadatta_the_essence_of_the_nagas.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-083-6">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-083"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:38:42.232Z" type="text-version" status="0.0.4" xml:id="UT22084-091-083-7">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:30:09.911Z" type="translation-status" status="2.h" xml:id="UT22084-091-083-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:30:09.911Z" type="text-version" status="0.0.5" xml:id="UT22084-091-083-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
