--- a/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
+++ b/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-003-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-096-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -57,6 +57,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:24:01.089Z" type="text-version" status="0.0.3" xml:id="UT22084-096-003-7">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:36:33.089Z" type="translation-status" status="2.h" xml:id="UT22084-096-003-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T15:36:33.089Z" type="text-version" status="0.0.4" xml:id="UT22084-096-003-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
