--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -33,7 +33,7 @@
                                 <editor role="finalReviewer" xml:id="UT22084-034-007-235">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.8 <date>2024</date>
+                <edition>v 1.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -221,6 +221,9 @@
                 <change who="#martina-cotter" when="2024-07-29T21:34:56.859Z" type="text-version" status="1.0.8" xml:id="UT22084-034-007-276">
                     <desc>updated links.</desc>
                 </change>
+                <change who="#john" when="2024-09-03T10:30:32.422Z" type="text-version" status="1.0.9" xml:id="UT22084-034-007-872">
+                    <desc>Edited one para in intro and added biblio reference.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -384,10 +387,13 @@
                                                   translation.</note>
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-034-007-18"/>
-                                        <p tid="38">Apart from Conze’s edition of the Sanskrit
-                                                manuscript and Vaidya’s reprint thereof, the sūtra
-                                                has also been translated into English and briefly
-                                                introduced by Conze (1973). The present translation
+                                        <p tid="133">As well as Conze’s edition of the Sanskrit
+                                                manuscript and Vaidya’s reprint of that edition, an English 
+                                                translation by Conze with a brief introduction
+                                                was published in 1973, and a French translation 
+                                                by Driessens in 1996.</p>
+                                        <milestone unit="chunk" xml:id="UT22084-034-007-181"/>
+                                        <p tid="134"> The present translation
                                                 is based on the Tibetan version in the Degé Kangyur,
                                                 in consultation with the Comparative Edition
                                                   (<foreign xml:lang="Bo-Ltn">dpe bsdur
@@ -914,6 +920,10 @@
                                                   <title xml:lang="en">Perfect Wisdom: The Short
                                                   Prajñāpāramitā Texts</title>. Buddhist Publishing
                                                 Group, 1973.</bibl>
+                                        <bibl xml:id="UT22084-034-007-871">Driessens, Georges, trans.
+                                                “La perfection de sagesse pour Kaushika.” In <title xml:lang="en">La Perfection 
+                                                        de sagesse</title>. Paris: Éditions du Seuil,
+                                                1996.</bibl>
                                         <bibl xml:id="UT22084-034-007-88">Herrmann-Pfandt, Adelheid.
                                                   <title xml:lang="de">Die lHan kar ma: ein früher
                                                   Katalog der ins Tibetische übersetzten
