--- a/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/translations/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -33,7 +33,7 @@
                                 <editor role="finalReviewer" xml:id="UT22084-034-007-235">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.9 <date>2024</date>
+                <edition>v 1.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -223,6 +223,9 @@
                 </change>
                 <change who="#john" when="2024-09-03T10:30:32.422Z" type="text-version" status="1.0.9" xml:id="UT22084-034-007-872">
                     <desc>Edited one para in intro and added biblio reference.</desc>
+                </change>
+                <change who="#john" when="2024-09-03T10:39:59.481Z" type="text-version" status="1.0.10" xml:id="UT22084-034-007-873">
+                    <desc>Further minor edits.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -922,7 +925,7 @@
                                                 Group, 1973.</bibl>
                                         <bibl xml:id="UT22084-034-007-871">Driessens, Georges, trans.
                                                 “La perfection de sagesse pour Kaushika.” In <title xml:lang="en">La Perfection 
-                                                        de sagesse</title>. Paris: Éditions du Seuil,
+                                                        de sagesse</title>, pp. 141–3. Paris: Éditions du Seuil,
                                                 1996.</bibl>
                                         <bibl xml:id="UT22084-034-007-88">Herrmann-Pfandt, Adelheid.
                                                   <title xml:lang="de">Die lHan kar ma: ein früher
@@ -937,7 +940,7 @@
                         </title>. Accessed
                                                 July 14, 2022.</bibl>
                                         <bibl xml:id="UT22084-034-007-223">Padmakara Translation Group, trans. <title xml:lang="en">
-                                                  <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-five Thousand Lines</ref>
+                                                  <ref target="https://read.84000.co/translation/toh9.html">The Perfection of Wisdom in Twenty-Five Thousand Lines</ref>
                                                   </title> (<title xml:lang="Sa-Ltn">Pañca­viṃśati­sāhasrikā­prajñā­pāramitā</title>, Toh 9). 
                                                   84000: Translating the Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-034-007-90">Sparham, Gareth, trans.
