--- a/translations/tengyur/placeholders/096-020_toh3843-svabhavatrayapravesasiddhi.xml
+++ b/translations/tengyur/placeholders/096-020_toh3843-svabhavatrayapravesasiddhi.xml
@@ -16,11 +16,11 @@
                 <consultant role="projectManager" xml:id="UT23703-096-020-6">Paul Hackett</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-096-020"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT23703-096-020-18">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-03T12:37:23.372Z" type="translation-status" status="2.g" xml:id="UT23703-096-020-19">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-03T12:37:23.372Z" type="text-version" status="0.0.6" xml:id="UT23703-096-020-20">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
