--- a/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
+++ b/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
@@ -35,7 +35,7 @@
                                         Gu</sponsor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -60,7 +60,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2024-04-18</date>
+                                <date>2024-09-04</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh505" type="text">
@@ -188,6 +188,9 @@
                     <desc>1.a</desc>
                 </change>
                 <change who="#martina-cotter" when="2024-09-04T13:11:26.863Z" type="text-version" status="1.0.0" xml:id="UT22084-087-010-229">
+                    <desc>First published version.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-09-04T13:13:42.887Z" type="text-version" status="1.0.1" xml:id="UT22084-087-010-230">
                     <desc>First published version.</desc>
                 </change>
                         </revisionDesc>
