--- a/translations/kangyur/placeholders/062-004_toh204-the_sutra_on_offering_lamps.xml
+++ b/translations/kangyur/placeholders/062-004_toh204-the_sutra_on_offering_lamps.xml
@@ -19,12 +19,12 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-062-004-8">Khenpo Konchok Monlam</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-062-004"/>
                 <date/>
             </publicationStmt>
@@ -52,6 +52,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-062-004-12">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T11:21:56.274Z" type="translation-status" status="2.h" xml:id="UT22084-062-004-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T11:21:56.274Z" type="text-version" status="0.0.5" xml:id="UT22084-062-004-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
