--- a/translations/kangyur/placeholders/072-032_toh332-the_penthouse_sutra.xml
+++ b/translations/kangyur/placeholders/072-032_toh332-the_penthouse_sutra.xml
@@ -14,12 +14,12 @@
     <consultant role="projectManager" xml:id="UT22084-072-032-4">Samantha Hung</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-072-032"/>
                 <date/>
             </publicationStmt>
@@ -41,6 +41,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-072-032-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T11:30:31.967Z" type="translation-status" status="2.h" xml:id="UT22084-072-032-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T11:30:31.967Z" type="text-version" status="0.0.3" xml:id="UT22084-072-032-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
