--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-057-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -106,6 +106,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-22T14:58:35.509Z" type="text-version" status="0.0.13" xml:id="UT22084-091-057-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T12:07:23.305Z" type="translation-status" status="2.a" xml:id="UT22084-091-057-31">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T12:07:23.305Z" type="text-version" status="0.0.14" xml:id="UT22084-091-057-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
