--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-087-002-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -108,6 +108,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-22T14:56:27.961Z" type="text-version" status="0.0.13" xml:id="UT22084-087-002-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T12:19:49.554Z" type="translation-status" status="2.a" xml:id="UT22084-087-002-31">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T12:19:49.554Z" type="text-version" status="0.0.14" xml:id="UT22084-087-002-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
