--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -14,12 +14,12 @@
                 <editor role="projectEditor" xml:id="UT22084-083-015-18">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +82,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-23T11:15:16.222Z" type="text-version" status="0.0.10" xml:id="UT22084-083-015-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:01:56.087Z" type="translation-status" status="2.e" xml:id="UT22084-083-015-22">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:01:56.087Z" type="text-version" status="0.0.11" xml:id="UT22084-083-015-23">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
