--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-013-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-013"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +65,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T05:57:40.196Z" type="text-version" status="0.0.5" xml:id="UT22084-088-013-9">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:50:11.732Z" type="translation-status" status="2.g" xml:id="UT22084-088-013-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:50:11.732Z" type="text-version" status="0.0.6" xml:id="UT22084-088-013-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
