--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" xml:id="UT22084-088-023-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-023"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T06:57:24.513Z" type="text-version" status="0.0.8" xml:id="UT22084-088-023-15">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:51:14.884Z" type="translation-status" status="2.g" xml:id="UT22084-088-023-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:51:14.884Z" type="text-version" status="0.0.9" xml:id="UT22084-088-023-17">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
