--- a/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
+++ b/translations/kangyur/placeholders/088-036_toh541,931-the_incantation_for_deliverance_from_the_eight_types_of_fear.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-036-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-036"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-01T16:13:24.097Z" type="text-version" status="0.0.5" xml:id="UT22084-088-036-9">
                     <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:52:25.475Z" type="translation-status" status="2.g" xml:id="UT22084-088-036-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T13:52:25.475Z" type="text-version" status="0.0.6" xml:id="UT22084-088-036-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
