--- a/translations/kangyur/placeholders/079-014_toh387-the_tantra_of_the_great_khasama.xml
+++ b/translations/kangyur/placeholders/079-014_toh387-the_tantra_of_the_great_khasama.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nam mkha' chen po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Mahākhasamatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Great Khasama</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal nam mkha' chen po'i rgyud kyi rgyal po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mahākhasamatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nam mkha' chen po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīmahākhasamatantrarāja</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal nam mkha' chen po'i rgyud kyi rgyal po/</title>
+                <author role="translatorMain" xml:id="UT22084-079-014-4">Daniel McNamara</author>
+                <author role="translatorEng" xml:id="UT22084-079-014-5">Daniel McNamara</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-079-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -40,6 +42,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-30T13:38:27.646Z" type="text-version" status="0.0.1" xml:id="UT22084-079-014-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-30T14:31:06.414Z" type="text-version" status="0.0.2" xml:id="UT22084-079-014-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:06:15.725Z" type="translation-status" status="2.h" xml:id="UT22084-079-014-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:06:15.725Z" type="text-version" status="0.0.3" xml:id="UT22084-079-014-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
