--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -16,11 +16,11 @@
                 <consultant role="projectManager" xml:id="UT22084-094-017-11">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-094-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -78,6 +78,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T13:52:50.287Z" type="text-version" status="0.0.2" xml:id="UT22084-094-017-16">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:28:58.351Z" type="translation-status" status="2.h" xml:id="UT22084-094-017-17">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:28:58.351Z" type="text-version" status="0.0.3" xml:id="UT22084-094-017-18">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
