--- a/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
+++ b/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-094-018-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-094-018"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T13:55:25.063Z" type="text-version" status="0.0.6" xml:id="UT22084-094-018-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:35:39.68Z" type="translation-status" status="2.h" xml:id="UT22084-094-018-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:35:39.68Z" type="text-version" status="0.0.7" xml:id="UT22084-094-018-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
