--- a/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
+++ b/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-031-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-031"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:51:03.775Z" type="text-version" status="0.0.6" xml:id="UT22084-090-031-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:51:16.465Z" type="translation-status" status="2.h" xml:id="UT22084-090-031-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T15:51:16.465Z" type="text-version" status="0.0.7" xml:id="UT22084-090-031-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
