--- a/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
+++ b/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
@@ -10,7 +10,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">bai DUr+ya’i ’od gyi gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble Dhāraṇī Called Vaiḍūryaprabha That
                     Activates the Power of the Thus-Gone Ones’ Absorption</title>
-                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­vaiḍūrya­prabha­nāma­baladhana­samādhi­dhāraṇī</title>
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­vaiḍūrya­prabha­nāma­balādhāna­samādhi­dhāraṇī</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་ཏིང་ངེ་འཛིན་གྱི་སྟོབས་བསྐྱེད་པ་བཻ་ཌཱུརྱའི་འོད་ཅེས་བྱ་བའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i ting nge
                     ’dzin gyi stobs bskyed pa bai DUr+ya’i ’od ces bya ba’i gzungs</title>
@@ -29,7 +29,7 @@
                 <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -187,6 +187,9 @@
                 </change>
                 <change who="#konchog" when="2024-09-05T13:51:55.298Z" type="text-version" status="1.0.2" xml:id="UT22084-087-010-231">
                     <desc>Several fixes across sections.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-09-06T17:24:34.17Z" type="text-version" status="1.0.3" xml:id="UT22084-087-010-232">
+                    <desc>updated typos in the Sanskrit.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -945,7 +948,7 @@
                             <term type="translationMain">Pratibhākūṭa</term>
                             <term status="verified" xml:lang="Bo-Ltn" n="1">spobs pa brtsegs pa </term>
                             <term xml:lang="bo" n="1">སྤོབས་པ་བརྩེགས་པ།</term>
-                            <term status="verified" xml:lang="Sa-Ltn" type="attestedDictionary">pratibhākuṭa</term>
+                            <term status="verified" xml:lang="Sa-Ltn" type="attestedDictionary">pratibhānakūṭa</term>
                             <note type="definition">
                                 <p>The name of a bodhisattva. </p>
                             </note>
