--- a/translations/tengyur/placeholders/096-020_toh3843-svabhavatrayapravesasiddhi.xml
+++ b/translations/tengyur/placeholders/096-020_toh3843-svabhavatrayapravesasiddhi.xml
@@ -6,21 +6,22 @@
             <titleStmt>
                 <title xml:lang="en" type="mainTitle">An Illustration of the Three Natures</title>
                 <title xml:lang="Sa-Ltn" type="mainTitle">Svabhāva­traya­praveśa­siddhi</title>
-                <title xml:lang="Bo-Ltn" type="mainTitle">rang bzhin gsum la 'jug pa'i sgrub pa/</title>
                 <title xml:lang="bo" type="mainTitle">རང་བཞིན་གསུམ་ལ་འཇུག་པའི་སྒྲུབ་པ།</title>
-                <author role="translatorMain" xml:id="UT23703-096-020-1"/>
+                <title xml:lang="Bo-Ltn" type="mainTitle">rang bzhin gsum la 'jug pa'i sgrub pa/</title>
+                <author role="translatorMain" xml:id="UT23703-096-020-1">Sravasti Abbey Translation Team</author>
                 <author role="translatorEng" xml:id="UT23703-096-020-2">Bhikṣuṇī Thubten Damcho</author>
                 <author role="translatorEng" xml:id="UT23703-096-020-3">Paul Hackett</author>
                 <author role="translatorEng" xml:id="UT23703-096-020-4">Ven. Thubten Lamsel</author>
                 <author role="translatorEng" xml:id="UT23703-096-020-5">William (“Bill”) Magee</author>
                 <consultant role="projectManager" xml:id="UT23703-096-020-6">Paul Hackett</consultant>
+                <editor role="associateEditor" xml:id="UT23703-096-020-27">Jeremy Manheim</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-096-020"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +79,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-03T12:37:23.372Z" type="text-version" status="0.0.6" xml:id="UT23703-096-020-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-03T12:41:48.647Z" type="text-version" status="0.0.7" xml:id="UT23703-096-020-28">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:30:40.451Z" type="translation-status" status="2.h" xml:id="UT23703-096-020-29">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:30:40.451Z" type="text-version" status="0.0.8" xml:id="UT23703-096-020-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
