--- a/translations/kangyur/placeholders/035-010_toh44-10-chapter_10_vairocana.xml
+++ b/translations/kangyur/placeholders/035-010_toh44-10-chapter_10_vairocana.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-035-010-11">Thomas Doctor</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -58,6 +58,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T13:46:49.926Z" type="text-version" status="0.0.7" xml:id="UT22084-035-010-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:47:26.007Z" type="translation-status" status="3" xml:id="UT22084-035-010-15">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:47:26.007Z" type="text-version" status="0.0.8" xml:id="UT22084-035-010-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
