--- a/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
+++ b/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
@@ -13,14 +13,15 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lag na rdo rje gos sngon po can gyi cho ga zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-095-003-5">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-095-003-6">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-095-003-15">Torsten Gerloff</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-095-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -73,6 +74,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T08:43:57.822Z" type="text-version" status="0.0.8" xml:id="UT22084-095-003-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T08:44:35.236Z" type="text-version" status="0.0.9" xml:id="UT22084-095-003-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:53:04.154Z" type="translation-status" status="2.f" xml:id="UT22084-095-003-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T13:53:04.154Z" type="text-version" status="0.0.10" xml:id="UT22084-095-003-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
