--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -9,18 +9,19 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gnyis pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">tshigs bcad gnyis pa'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-057-002-1">Pema Yeshé Dé Translation Team</author>
-                <consultant role="projectManager" xml:id="UT22084-057-002-2">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" xml:id="UT22084-057-002-3">Giuliano Francisco Proença</author>
+                <consultant role="projectManager" xml:id="UT22084-057-002-2">Giuliano Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-057-002-3">Giuliano Proença</author>
                 <editor role="proofreader" xml:id="UT22084-057-002-4">Daniela Espíndola</editor>
                 <editor role="projectEditor" xml:id="UT22084-057-002-21">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-057-002-30">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-057-002-40">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-057-002"/>
                 <date/>
             </publicationStmt>
@@ -107,6 +108,18 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:10:25.947Z" type="text-version" status="0.0.12" xml:id="UT22084-057-002-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T14:15:22.3Z" type="text-version" status="0.0.13" xml:id="UT22084-057-002-41">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T14:15:35.179Z" type="text-version" status="0.0.14" xml:id="UT22084-057-002-42">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:03:25.262Z" type="translation-status" status="2.b" xml:id="UT22084-057-002-43">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:03:25.262Z" type="text-version" status="0.0.15" xml:id="UT22084-057-002-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
