--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -8,18 +8,19 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Ekagāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gcig pa/</title>
                 <author role="translatorMain" xml:id="UT22084-072-023-1">Pema Yeshé Dé Translation Team</author>
-                <consultant role="projectManager" xml:id="UT22084-072-023-2">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" xml:id="UT22084-072-023-3">Giuliano Francisco Proença</author>
+                <consultant role="projectManager" xml:id="UT22084-072-023-2">Giuliano Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-023-3">Giuliano Proença</author>
                 <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-023-21">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-023-30">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-023-40">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,18 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:11:39.018Z" type="text-version" status="0.0.12" xml:id="UT22084-072-023-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T14:13:46.918Z" type="text-version" status="0.0.13" xml:id="UT22084-072-023-41">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T14:14:00.249Z" type="text-version" status="0.0.14" xml:id="UT22084-072-023-42">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:06:51.337Z" type="translation-status" status="2.b" xml:id="UT22084-072-023-43">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:06:51.337Z" type="text-version" status="0.0.15" xml:id="UT22084-072-023-44">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
