--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -8,18 +8,19 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Caturgāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa bzhi pa/</title>
                 <author role="translatorMain" xml:id="UT22084-072-024-1">Pema Yeshé Dé Translation Team</author>
-                <consultant role="projectManager" xml:id="UT22084-072-024-2">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" xml:id="UT22084-072-024-3">Giuliano Francisco Proença</author>
+                <consultant role="projectManager" xml:id="UT22084-072-024-2">Giuliano Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-024-3">Giuliano Proença</author>
                 <editor role="proofreader" xml:id="UT22084-072-024-4">Daniela Espíndola</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-024-20">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-024-21">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-024-31">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +77,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:12:51.855Z" type="text-version" status="0.0.9" xml:id="UT22084-072-024-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-05T14:16:07.851Z" type="text-version" status="0.0.10" xml:id="UT22084-072-024-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:13:45.539Z" type="translation-status" status="2.b" xml:id="UT22084-072-024-33">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:13:45.539Z" type="text-version" status="0.0.11" xml:id="UT22084-072-024-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
