--- a/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
+++ b/translations/kangyur/placeholders/091-006_toh609,925-the_incantation_that_confers_fearlessness.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thams cad la mi 'jigs pa rab tu sbyin pa zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-006-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-006-5">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-091-006-14">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-02T09:49:59.258Z" type="text-version" status="0.0.5" xml:id="UT22084-091-006-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-06T08:41:53.826Z" type="text-version" status="0.0.6" xml:id="UT22084-091-006-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:19:03.077Z" type="translation-status" status="2.f" xml:id="UT22084-091-006-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:19:03.077Z" type="text-version" status="0.0.7" xml:id="UT22084-091-006-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
