--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">lcags mchu'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryalohatuṇḍanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lcags mchu zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-096-010-1"/>
+                <author role="translatorMain" xml:id="UT22084-096-010-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-096-010-2">Lowell Cook</author>
+                <editor role="projectEditor" xml:id="UT22084-096-010-13">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-096-010"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +57,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-02T09:48:51.419Z" type="text-version" status="0.0.5" xml:id="UT22084-096-010-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:49:22.508Z" type="text-version" status="0.0.6" xml:id="UT22084-096-010-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:21:47.095Z" type="translation-status" status="2.f" xml:id="UT22084-096-010-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-16T14:21:47.095Z" type="text-version" status="0.0.7" xml:id="UT22084-096-010-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
