--- a/translations/tengyur/placeholders/052-008_toh2267-kakhasya_dohatippana.xml
+++ b/translations/tengyur/placeholders/052-008_toh2267-kakhasya_dohatippana.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT23703-052-008-6">Julia Stenzel</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-052-008"/>
                 <date/>
             </publicationStmt>
@@ -75,6 +75,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT23703-052-008-20">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:33:21.197Z" type="translation-status" status="2.g" xml:id="UT23703-052-008-21">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:33:21.197Z" type="text-version" status="0.0.10" xml:id="UT23703-052-008-22">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
