--- a/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
+++ b/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-031-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-096-031"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T14:15:23.044Z" type="text-version" status="0.0.6" xml:id="UT22084-096-031-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:51:06.43Z" type="translation-status" status="2.g" xml:id="UT22084-096-031-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T13:51:06.43Z" type="text-version" status="0.0.7" xml:id="UT22084-096-031-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
