--- a/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
+++ b/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-085-004-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-085-004"/>
                 <date/>
             </publicationStmt>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-09T10:14:43.051Z" type="text-version" status="0.0.4" xml:id="UT22084-085-004-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T14:51:43.318Z" type="translation-status" status="2.g" xml:id="UT22084-085-004-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-18T14:51:43.318Z" type="text-version" status="0.0.5" xml:id="UT22084-085-004-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
