--- a/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
+++ b/translations/kangyur/placeholders/079-036_toh409-the_tantra_of_vajrabhairavas_destruction.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-079-036-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-079-036-13">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-079-036-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-079-036-30">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-079-036"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T11:29:03.433Z" type="text-version" status="0.0.10" xml:id="UT22084-079-036-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T11:32:05.755Z" type="text-version" status="0.0.11" xml:id="UT22084-079-036-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:23:57.997Z" type="translation-status" status="2.b" xml:id="UT22084-079-036-32">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:23:57.997Z" type="text-version" status="0.0.12" xml:id="UT22084-079-036-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
