--- a/translations/kangyur/placeholders/083-020_toh472,1996-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472,1996-the_ritual_practices_of_the_muskrat.xml
@@ -6,22 +6,23 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Ritual Practices of the Muskrat</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Chucchundara­kalpa</title>
+                <title key="toh1996" xml:lang="bo" type="mainTitle">ཙྪུ་ཙྪུནྡ་རའི་རྟོག་པ།</title>
+                <title key="toh1996" xml:lang="Bo-Ltn" type="mainTitle">ts+tshu ts+tshun+da ra'i rtog pa/</title>
                 <title key="toh472" type="mainTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga</title>
                 <title key="toh472" type="otherTitle" xml:lang="Sa-Ltn">Chucchundarakalpanāma</title>
                 <title key="toh472" type="otherTitle" xml:lang="Bo-Ltn">te'u lo pa'i cho ga zhes bya ba/</title>
-                <title key="toh1996" xml:lang="bo" type="mainTitle">ཙྪུ་ཙྪུནྡ་རའི་རྟོག་པ།</title>
-                <title key="toh1996" xml:lang="Bo-Ltn" type="mainTitle">ts+tshu ts+tshun+da ra'i rtog pa/</title>
                 <author role="translatorMain" xml:id="UT22084-083-020-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-020-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-083-020-13">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-083-020-22">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-083-020-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-083-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -97,6 +98,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T11:33:46.993Z" type="text-version" status="0.0.11" xml:id="UT22084-083-020-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T11:34:21.708Z" type="text-version" status="0.0.12" xml:id="UT22084-083-020-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:35:39.587Z" type="translation-status" status="2.b" xml:id="UT22084-083-020-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-19T14:35:39.587Z" type="text-version" status="0.0.13" xml:id="UT22084-083-020-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
