--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-072-023-40">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:06:51.337Z" type="text-version" status="0.0.15" xml:id="UT22084-072-023-44">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:14:05.79Z" type="translation-status" status="2.a" xml:id="UT22084-072-023-45">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:14:05.79Z" type="text-version" status="0.0.16" xml:id="UT22084-072-023-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
