--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-072-024-31">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +86,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-16T14:13:45.539Z" type="text-version" status="0.0.11" xml:id="UT22084-072-024-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:16:01.736Z" type="translation-status" status="2.a" xml:id="UT22084-072-024-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:16:01.736Z" type="text-version" status="0.0.12" xml:id="UT22084-072-024-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
