--- a/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-021-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-021"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T13:16:58.612Z" type="text-version" status="0.0.7" xml:id="UT22084-090-021-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:57:36.304Z" type="translation-status" status="2.g" xml:id="UT22084-090-021-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:57:36.304Z" type="text-version" status="0.0.8" xml:id="UT22084-090-021-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
